--- a/resources/templates/logged-in.html
+++ b/resources/templates/logged-in.html
@@ -16,8 +16,20 @@ Welcome, {{username}}!
     <input type="number" placeholder="Beer #" name="beerid"/>
     <button type="submit">Delete</button>
 </form>
+<form action="edit-beer" method="post">
+    <input type = "text" placeholder="Beer #" name = "id"/>
+    <input type="text" placeholder="Beer name" name="editName"/>
+    <select name="beertype">
+        <option value="Ale">Ale</option>
+        <option value="Lager">Lager</option>
+        <option value="Pilsner">Pilsner</option>
+        <option value="Stout">Stout</option>
+        <option value="Other">Other</option>
+    </select>
+    <button type="submit">Edit</button>
+</form> <br>
 {{#beers}}
-{{id}}. {{name}} - {{type}}<br>
+{{id}}. {{name}} - {{type}}  <br>
 {{/beers}}
 </body>
 </html>
