incorporated IDENTITY rather than ROWNUM

--- a/resources/templates/logged-in.html
+++ b/resources/templates/logged-in.html
@@ -17,8 +17,8 @@ Welcome, {{username}}!
     <button type="submit">Delete</button>
 </form>
 <form action="edit-beer" method="post">
-    <input type = "text" placeholder="Beer #" name = "id"/>
-    <input type="text" placeholder="Beer name" name="editName"/>
+    <input type = "text" placeholder="Beer #" name = "beerid"/>
+    <input type="text" placeholder="Beer name" name="beername"/>
     <select name="beertype">
         <option value="Ale">Ale</option>
         <option value="Lager">Lager</option>
